--- a/b-plus-client/package.json
+++ b/b-plus-client/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "glyphicons": "^0.2.0",
     "jquery": "^3.3.1",
+    "ngx-pagination": "^3.2.1",
     "popper.js": "^1.14.4",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.3",
