--- a/b-plus-client/package.json
+++ b/b-plus-client/package.json
@@ -25,18 +25,18 @@
     "glyphicons": "^0.2.0",
     "jquery": "^3.3.1",
     "ngx-pagination": "^3.2.1",
-    "popper.js": "^1.14.4",
+    "popper.js": "^1.14.5",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.6",
-    "@angular/cli": "^6.2.6",
+    "@angular-devkit/build-angular": "^0.8.7",
+    "@angular/cli": "^6.2.7",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.11",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
